--- a/platformio.ini
+++ b/platformio.ini
@@ -29,3 +29,4 @@ build_flags =
     -D CONFIG_WPA_11KV_SUPPORT=y
 monitor_speed = 115200
 upload_speed = 460800
+build_src_filter = +<*> -<secrets_example.cpp>
